added card section

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           <!--============= banner bottom ================-->
 
 <div class="flex justify-center -mt-24 hidden lg:flex"> 
-  
+
   <div class="flex gap-5 justify-around shadow w-3/4 absolute bg-white py-2 rounded-lg">
     <div class="flex items-center gap-3 flex-col">
       <img src="images/fruit1.png" alt="">
@@ -234,17 +234,260 @@
 </section>
 
 
+    <!--============= main section  ================-->
+
+  <main class="container mx-auto mt-20">
+
+    <section class="lg:pt-60 px-5">
+      <div class="lg:flex justify-between">
+        <div class="p5">
+          <h2 class="text-5xl font-extrabold text-center lg:text-left">Deal of the day</h2>
+          <p class="max-w-xl my-5 lg:text-start text-center md:mx-auto">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+        </div>
 
 
+         <!--============= countdown section ===============-->
 
 
+        <div class=" grid grid-flow-col gap-5 text-center justify-center lg:justify-end auto-cols-max">
+          <div class="flex flex-col">
+            <span class="countdown font-mono text-5xl font-extrabold">
+              <span style="--value:15;"></span>
+            </span>
+            days
+          </div> 
+          <div class="flex flex-col">
+            <span class="countdown font-mono text-5xl font-extrabold">
+              <span style="--value:10;"></span>
+            </span>
+            hours
+          </div> 
+          <div class="flex flex-col">
+            <span class="countdown font-mono text-5xl font-extrabold">
+              <span style="--value:24;"></span>
+            </span>
+            min
+          </div> 
+          <div class="flex flex-col">
+            <span class="countdown font-mono text-5xl font-extrabold">
+              <span style="--value:39;"></span>
+            </span>
+            sec
+          </div>
+        </div>
+      </div>
+
+      <!--================= card section ==================-->
+
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4 lg:grid-cols-4 mt-12">
+
+        <!--============ card 1 ================-->
+
+        <div class="card  bg-base-100 shadow-md">
+          <figure class="px-10 pt-10">
+            <img src="images/fruit6.png" alt="Shoes" class="rounded-md" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">12.90$ - 18.85$</h2>
+            <hr class="w-64 h-px my-8 bg-gray-200 border-0 dark:bg-gray-700">
+              <p>Apples</p>
+              <div class="rating">
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              </div>
+
+              
+                <!-- Open the modal using ID.showModal() method -->
+
+              <button class="text-red-500" onclick="my_modal_1.showModal()">Details</button>
+              <dialog id="my_modal_1" class="modal">
+                <div class="">
+                  <div class="card w-96 bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                      <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title">Orange</h2>
+                      <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                      <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                       </div>
+                       <div class="modal-action">
+                        <form method="dialog">
+                          <!-- if there is a button in form, it will close the modal -->
+                          <div>
+                            <button class="btn">Close</button>
+                            <button class="btn">Shop NOw</button>
+                          </div>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </dialog> 
+          </div>
+        </div>
+        <div class="card bg-base-100 shadow-md">
+          <figure class="px-10 pt-10">
+            <img src="images/fruit2.png" alt="Shoes" class="rounded-md" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">12.90$ - 18.85$</h2>
+            <hr class="w-64 h-px my-8 bg-gray-200 border-0 dark:bg-gray-700">
+              <p>Orange</p>
+              <div class="rating">
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              </div>
+                <!-- Open the modal using ID.showModal() method -->
+              <button class="text-red-500" onclick="my_modal_2.showModal()">Details</button>
+              <dialog id="my_modal_2" class="modal">
+                <div class="">
+                  <div class="card w-96 bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                      <img src="images/fruit9.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title">Banana</h2>
+                      <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                      <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                       </div>
+                       <div class="modal-action">
+                        <form method="dialog">
+                          <!-- if there is a button in form, it will close the modal -->
+                          <div>
+                            <button class="btn">Close</button>
+                            <button class="btn">Shop NOw</button>
+                          </div>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </dialog> 
+          </div>
+        </div>
+        <!-- card 3 -->
+        <div class="card bg-base-100 shadow-md">
+          <figure class="px-10 pt-10">
+            <img src="images/fruit3.png" alt="Shoes" class="rounded-md" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">12.90$ - 18.85$</h2>
+            <hr class="w-64 h-px my-8 bg-gray-200 border-0 dark:bg-gray-700">
+              <p>Red Dragon</p>
+              <div class="rating">
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              </div>
+                <!-- Open the modal using ID.showModal() method -->
+              <button class="text-red-500" onclick="my_modal_3.showModal()">Details</button>
+              <dialog id="my_modal_3" class="modal">
+                <div class="">
+                  <div class="card w-96 bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                      <img src="images/fruit9.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title">Banana</h2>
+                      <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                      <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                       </div>
+                       <div class="modal-action">
+                        <form method="dialog">
+                          <!-- if there is a button in form, it will close the modal -->
+                          <div>
+                            <button class="btn">Close</button>
+                            <button class="btn">Shop NOw</button>
+                          </div>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </dialog> 
+          </div>
+        </div>
+        <!-- card 4 -->
+        <div class="card bg-base-100 shadow-md">
+          <figure class="px-10 pt-10">
+            <img src="images/fruit9.png" alt="Shoes" class="rounded-md" />
+          </figure>
+          <div class="card-body items-center text-center">
+            <h2 class="card-title">12.90$ - 18.85$</h2>
+            <hr class="w-64 h-px my-8 bg-gray-200 border-0 dark:bg-gray-700">
+              <p>Apples</p>
+              <div class="rating">
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              </div>
+                <!-- Open the modal using ID.showModal() method -->
+              <button class="text-red-500" onclick="my_modal_4.showModal()">Details</button>
+              <dialog id="my_modal_4" class="modal">
+                <div class="">
+                  <div class="card w-96 bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                      <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title">Orange</h2>
+                      <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                      <div class="rating">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                       </div>
+                       <div class="modal-action">
+                        <form method="dialog">
+                          <!-- if there is a button in form, it will close the modal -->
+                          <div>
+                            <button class="btn">Close</button>
+                            <button class="btn">Shop NOw</button>
+                          </div>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </dialog> 
+          </div>
+        </div>
 
 
-
-
-
-
-<main></main>
+        </div>
+      <div class="flex justify-center mt-12">
+        <button class="btn bg-color-primary border-none hover:bg-slate-700 text-white">Shop All </button>
+      </div>
+    </section>
+</main>
 <footer></footer>
 
                 
