footer section added

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
               colors: {
                 clifford: '#da373d',
                 'color-primary': '#F85559',
+                'color-bg': '#000000',
               }
             }
           }
@@ -624,7 +625,35 @@
 
       </section>
 </main>
-<footer></footer>
+
+   <!--============== footer sectio ================-->
+
+
+ <footer class="pt-10 mt-20 pb-40 bg-color-bg ">
+  <div class="flex items-center justify-center mt-24">
+    <img src="images/logo.png" alt="">
+    <h3 class="text-white text-2xl ps-2">Fruit Burst</h3>
+  </div>
+
+  <div class="flex justify-center my-14">
+    <div class="grid grid-cols-4 md:grid-cols-6 gap-3 text-sm text-white">
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Shop</a>
+      <a href="#">All Fruits</a>
+      <a href="#">Support</a>
+      <a href="#">My Account</a>
+    </div>
+  </div>
+
+  <div class="flex justify-center">
+    <div class="grid grid-cols-3 gap-10">
+      <a href="#"><i class=" duration-500 hover:text-slate-800 text-3xl text-white fa-brands fa-facebook"></i></a>
+      <a href="#"><i class=" duration-500 hover:text-slate-800 text-3xl text-white fa-brands fa-square-twitter"></i></a>
+      <a href="#"><i class=" duration-500 hover:text-slate-800 text-3xl text-white fa-brands fa-linkedin"></i></a>
+    </div>
+  </div>
+</footer>
 
                 
  
