added updet code

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
           <!--============= banner bottom ================-->
 
-<div class="flex justify-center -mt-24 hidden lg:flex"> 
+<div class=" justify-center -mt-24 hidden lg:flex"> 
 
   <div class="flex gap-5 justify-around shadow w-3/4 absolute bg-white py-2 rounded-lg">
     <div class="flex items-center gap-3 flex-col">
